# tuto-llm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-jupyterlite.yml
data/: pokemon.txt  pokemon_eng.txt  prenoms.txt
docs/: AI_POLICY.md  AUDIT_PEDAGOGIQUE_EN.md  DATASETS.md  ISO_STANDARDS_REFERENCE.md  PEDAGOGICAL_PRACTICES.md  ZERO_INSTALL.md
notebooks/: 01_deviner_la_suite.ipynb  02_apprendre_des_erreurs.ipynb  03_la_memoire_du_modele.ipynb  04_lattention.ipynb  05_mon_premier_llm.ipynb  06_entrainer_le_modele.ipynb
prompts/: audit_pedagogique_education_nationale.md
scripts/: _refactor_nb01.py  _refactor_nb02.py  _refactor_nb03.py  _refactor_nb04.py  _refactor_nb05.py  _refactor_nb06.py  build_datasets.py
src/tuto_llm/: __init__.py  core.py  data.py  training.py
tests/: conftest.py  test_core.py  test_data.py  test_notebook_outputs.py  test_notebooks.py  test_training.py
